[package]
name = "proxytainer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Control containers via a transparent TCP proxy."
repository = "https://github.com/courtc/proxytainer"
authors = ["Courtney Cavin"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
docker-api = "0.14.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "rt", "signal", "time"] }
